--- a/minhas_tarefas/src/main/resources/application-prod.properties
+++ b/minhas_tarefas/src/main/resources/application-prod.properties
@@ -1,2 +1,9 @@
 spring.application.name=minhas_tarefas
 server.port=8081
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/tarefas?Timezone=America/Sao_Paulo
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.username=root
+spring.datasource.password=#R1c@rd084
