Internacionalização de algumas mensagens e criação do arquivo messages.properties que centraliza as mensagens de Bad Request

--- a/minhas_tarefas/src/main/resources/application.properties
+++ b/minhas_tarefas/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=minhas_tarefas
 server.servlet.context-path=/minhastarefas
-spring.profiles.active=prod
+spring.profiles.active=dev
+
+#Trecho de código incluido para que no postman fosse exibido o retorno de erro das requisições
+server.error.include-binding-errors=always
