--- a/minhas_tarefas/pom.xml
+++ b/minhas_tarefas/pom.xml
@@ -85,7 +85,13 @@
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
 
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.springframework.security</groupId>
+     <artifactId>spring-security-config</artifactId>
+     <version>5.1.6.RELEASE</version>
+   </dependency>
+ </dependencies>
 	<build>
 		<plugins>
 			<plugin>
