Ajustando o processo de autorização de uso do sistema de HttpBasic para Token

--- a/minhas_tarefas/src/main/resources/application.properties
+++ b/minhas_tarefas/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=minhas_tarefas
 server.servlet.context-path=/minhastarefas
+
 spring.profiles.active=dev
+
+app.jwt.SecretKey=ChaveSecreta
+app.jwt.ExpirationMS=28800000
 
 #Trecho de código incluido para que no postman fosse exibido o retorno de erro das requisições
 server.error.include-binding-errors=always
