--- a/minhas_tarefas/pom.xml
+++ b/minhas_tarefas/pom.xml
@@ -85,12 +85,17 @@
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
 
-	
-   <dependency>
-     <groupId>org.springframework.security</groupId>
-     <artifactId>spring-security-config</artifactId>
-     <version>5.1.6.RELEASE</version>
-   </dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>5.1.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
  </dependencies>
 	<build>
 		<plugins>
